# Blog-for-Dgango-1.0

./: pyproject.toml  установка poetry.txt
config/: settings.py
