[tool.poetry]
name = "first-app-poetry"
version = "0.1.0"
description = ""
authors = ["Aleksei Kavko <108331145+Aleks2317@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
